--- a/languages/translations.yaml
+++ b/languages/translations.yaml
@@ -55,6 +55,8 @@ uz:
     📸 <b>Ajoyib!</b> Endi rasm yuboring
     
     Tort ustiga qo'ymoqchi bo'lgan rasmingizni yuboring 🖼
+
+    <b>Rasm qoyish narxi: 15 000 so'm</b>
     
     💡 <i>Maslahat: Yuqori sifatli rasm yuboring</i>
   
