Last Commit before prod

--- a/languages/translations.yaml
+++ b/languages/translations.yaml
@@ -47,6 +47,8 @@ uz:
   # Image selection
   would_like_image: |
     🖼 <b>Tortga rasm qo'yishni xohlaysizmi?</b>
+
+     <b>Rasm qoyish narxi: 15 000 so'm</b>
     
     Tort ustiga sevimli rasmingizni qo'yishimiz mumkin! 
     Bu sizning tortingizni yanada maxsus qiladi 🎨✨
